page live score Stats component

--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -409,6 +409,207 @@
                 </div>
               </div>
             </div>
+            <div class="col-sm-12 col-lg-6 col-xl-4">
+              <h6 class="d-inline-block">Stats</h6>
+              <div class="team-field-section">
+                <div class="rank">
+                  <div class="rank__no aligner">
+                    <div class="rank__center"><span>Rank</span><span>124</span></div>
+                  </div>
+                  <div class="rank_select">
+                    <div class="rank__content">
+                      <div class="dropdown">
+                        <button id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-secondary dropdown-toggle">Contest touchdowns all day!</button>
+                        <div aria-labelledby="dropdownMenuButton" class="dropdown-menu"><a class="dropdown-item">Team A</a><a class="dropdown-item">Team B</a><a class="dropdown-item">Team C</a></div>
+                      </div>
+                      <div class="rank__playlist">
+                        <div class="rank__playlist-item"><span class="playing">Playing</span><span>4</span></div>
+                        <div class="rank__playlist-item"><span class="played">Played</span><span>2</span></div>
+                        <div class="rank__playlist-item"><span class="not-played">Not played</span><span>4</span></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="rank__stats">
+                    <div class="rank__content leaders-list">
+                      <p class="tit">original</p>
+                      <p>90.3 FP</p>
+                      <p class="tit">Live projections</p>
+                      <p>114.8 FP</p>
+                      <p class="tit">PMR</p>
+                      <p>360 min</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="nl-team-button">
+                <button type="button" class="btn btn-team btn-big-radius active field-view-btn">field view</button>
+                <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
+              </div>
+              <div class="nl-team-field football">
+                <div class="striker-line"></div>
+                <div class="midfielder-line"></div>
+                <div class="defender-line"></div>
+                <div class="player-main-block football">
+                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/img-FLEX.png" alt="FLEX">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>gronkowski</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
+                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/img-K.png" alt="K">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>gronkowski</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
+                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/img-LRB.png" alt="LRB">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>gronkowski</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
+                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/img-RRB.png" alt="RRB">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>gronkowski</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
+                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>gronkowski</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
+                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/img-LWR.png" alt="LWR">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>gronkowski</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
+                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/img-RWR.png" alt="RWR">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>gronkowski</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
+                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/img-TE.png" alt="TE">
+                    <div class="nl-player-block--data">
+                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p>gronkowski</p>
+                      <p class="data"><span>12.67</span> <span>$42000</span></p>
+                    </div>
+                  </div>
+                  <div class="nl-player-block nl-team-logo-position"><img src="assets/img/football/team-logo.png" alt="logo"></div>
+                </div>
+              </div>
+              <div class="nl-team-list nl-my-teams hide">
+                <div class="nl-card-wrapper">
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="nl-team-card table-data-field">
+                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <table class="table table-striped nl-team-list-table">
+                        <thead>
+                          <tr>
+                            <th>NAME</th>
+                            <th>POS</th>
+                            <th>FP</th>
+                            <th>SALARY</th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">FLEX</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">K</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">LRB</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">RRB</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">QB</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">LWR</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">RWR</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">TE</td>
+                            <td>30</td>
+                            <td>$0</td>
+                            <td>
+                              <button class="btn btn-primary btn-sm btn-warning">cut</button>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
