updated top 5 managers with correct images, fixed margin bottom issues, fixed tabs in upcoming contest issues

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -69,7 +69,7 @@
                     <li class="nav-item dropdown"><a href="" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><span>Sport</span> <img src="assets/img/ball.png" alt="#"></a>
                       <div aria-labelledby="dropdownMenuLink" class="sports-selector dropdown-menu"><a href="create_team.html" data-sports="soccer" class="sport-link dropdown-item"><span>Soccer</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img"></a><a href="create_team_football.html" data-sports="football" class="sport-link dropdown-item"><span>Football</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img"></a><a href="#" data-sports="baseball" class="sport-link dropdown-item"><span>Baseball</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img"></a><a href="#" data-sports="tennis" class="sport-link dropdown-item"><span>Tennis</span> <img src="assets/img/ball.png" alt="#" class="navbar-nav__sports-img"></a></div>
                     </li>
-                    <li class="nav-item"><a href="#" class="nav-link">HOME</a></li>
+                    <li class="nav-item"><a href="homepage.html" class="nav-link">HOME</a></li>
                     <li class="nav-item"><a href="my_teams.html" class="nav-link">MY TEAMS</a></li>
                     <li class="nav-item"><a href="contests.html" class="nav-link">CONTESTS</a></li>
                     <li class="nav-item"><a href="players.html" class="nav-link">PLAYERS</a></li>
@@ -105,7 +105,7 @@
             <h3 class="title col-lg-6">Pick Your Sport:</h3>
             <div class="sports-icon col-lg-6"><img src="assets/img/football.png" alt="" class="sports"><img src="assets/img/basketball.png" alt="" class="sports"><img src="assets/img/americanfootball.png" alt="" class="sports"><img src="assets/img/baseball.png" alt="" class="sports"><img src="assets/img/cricket.png" alt="" class="sports"><img src="assets/img/hockey.png" alt="" class="sports"><img src="assets/img/mma.png" alt="" class="sports"></div>
           </div>
-          <div class="row">
+          <div class="row top-5-section">
             <div class="col-lg-6 col-xl-5 position">
               <h5 class="text-center visible-xxs subtitle position">TOP 5<span>Tight ends</span></h5>
               <h5 class="hidden-xxs subtitle">TOP 5<span class="position-subtitle"> 
@@ -482,60 +482,60 @@
                           <li class="nav-item"><a data-toggle="tab" href="#manager1" role="tab" class="nav-link active">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="manager-thumbnail manager-1"></div>
                                   <div class="number">
                                     <p>1</p>
                                   </div>
-                                  <div class="player-thumbnail-name">
-                                    <p>MattRyan1</p>
+                                  <div class="manager-thumbnail-name">
+                                    <p>Rafael</p>
                                   </div>
                                 </div>
                               </div></a></li>
                           <li class="nav-item"><a data-toggle="tab" href="#manager2" role="tab" class="nav-link">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="manager-thumbnail manager-2"></div>
                                   <div class="number">
                                     <p>2</p>
                                   </div>
-                                  <div class="player-thumbnail-name">
-                                    <p>MattRyan2</p>
+                                  <div class="manager-thumbnail-name">
+                                    <p>Oscar</p>
                                   </div>
                                 </div>
                               </div></a></li>
                           <li class="nav-item"><a data-toggle="tab" href="#manager3" role="tab" class="nav-link">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="manager-thumbnail manager-3"></div>
                                   <div class="number">
                                     <p>3</p>
                                   </div>
-                                  <div class="player-thumbnail-name">
-                                    <p>MattRyan3</p>
+                                  <div class="manager-thumbnail-name">
+                                    <p>Dan</p>
                                   </div>
                                 </div>
                               </div></a></li>
                           <li class="nav-item"><a data-toggle="tab" href="#manager4" role="tab" class="nav-link">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="manager-thumbnail manager-4"></div>
                                   <div class="number">
                                     <p>4</p>
                                   </div>
-                                  <div class="player-thumbnail-name">
-                                    <p>MattRyan4</p>
+                                  <div class="manager-thumbnail-name">
+                                    <p>Nicholas</p>
                                   </div>
                                 </div>
                               </div></a></li>
                           <li class="nav-item"><a data-toggle="tab" href="#manager5" role="tab" class="nav-link">
                               <div class="menu-item top-5">
                                 <div class="players"> 
-                                  <div class="player-thumbnail"></div>
+                                  <div class="manager-thumbnail manager-5"></div>
                                   <div class="number">
                                     <p>5</p>
                                   </div>
-                                  <div class="player-thumbnail-name">
-                                    <p>MattRyan5</p>
+                                  <div class="manager-thumbnail-name">
+                                    <p>Anthony</p>
                                   </div>
                                 </div>
                               </div></a></li>
@@ -549,7 +549,7 @@
                                     <p>1</p>
                                   </div>
                                   <div class="name">
-                                    <p>Matt Ryan1</p>
+                                    <p>Rafael Groswirt</p>
                                   </div>
                                   <p class="points">121.5 PTS </p>
                                 </div>
@@ -1077,7 +1077,7 @@
               </script>
             </div>
           </div>
-          <div class="row">
+          <div class="row bottom-teams-contests-section">
             <div class="col-lg-6 col-xl-5 field">
               <section class="nl-section nl-create-team homepage-field">
                 <div class="container-fluid">
@@ -1086,14 +1086,14 @@
                       <h5>MY TEAMS</h5>
                     </div>
                     <div class="col-md-12 col-lg-12 col-xl-12">
-                      <form class="form-signin">
+                      <form class="form-signin dropdown-my-teams">
                         <div class="input-group">
                           <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
-                            <option selected="" disabled="" hidden="">COUNTRY</option>
-                            <option>USA</option>
-                            <option>CANADA</option>
-                            <option>UK</option>
-                            <option>PORTUGAL </option>
+                            <option selected="" disabled="" hidden="">Main best NFL Team!</option>
+                            <option>Other amazing team name1!</option>
+                            <option>Other amazing team name2!</option>
+                            <option>Other amazing team name3!</option>
+                            <option>Other amazing team name4! </option>
                           </select>
                         </div>
                       </form>
@@ -1297,10 +1297,10 @@
                 <div class="col-lg-12 team">
                   <div class="nl-players-table nl-contests-table homepage-table">
                     <ul role="tablist" class="nav nav-tabs">
-                      <li class="nav-item"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">NLC2</a></li>
-                      <li class="nav-item"><a data-toggle="tab" href="#gk" role="tab" class="nav-link">Free</a></li>
-                      <li class="nav-item"><a data-toggle="tab" href="#d" role="tab" class="nav-link">Private</a></li>
-                      <li class="nav-item"><a data-toggle="tab" href="#f" role="tab" class="nav-link">My&nbsp;contests</a></li>
+                      <li class="nav-item smaller-nav"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">NLC2</a></li>
+                      <li class="nav-item smaller-nav"><a data-toggle="tab" href="#gk" role="tab" class="nav-link">Free</a></li>
+                      <li class="nav-item smaller-nav"><a data-toggle="tab" href="#d" role="tab" class="nav-link">Private</a></li>
+                      <li class="nav-item bigger-nav"><a data-toggle="tab" href="#f" role="tab" class="nav-link">My&nbsp;contests</a></li>
                     </ul>
                     <div class="tab-content">
                       <div id="all" role="tabpanel" class="tab-pane active">
@@ -1416,6 +1416,48 @@
                                     <td>1000</td>
                                     <td></td>
                                     <td class="st-full">FULL</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td></td>
+                                    <td class="st-full">FULL</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
                                   </tr>
                                   <tr>
                                     <td>WK3 G Joe Theismann 5 team Challenge</td>
