changed container to be wider, updated table values and improved responsive behavior

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -100,7 +100,7 @@
     </header>
     <main>
       <section class="nl-section homepage">
-        <div class="container-wider">
+        <div class="container-fluid">
           <div class="row sports-options">
             <h3 class="title col-lg-6">Pick Your Sport:</h3>
             <div class="sports-icon col-lg-6"><img src="assets/img/football.png" alt="" class="sports"><img src="assets/img/basketball.png" alt="" class="sports"><img src="assets/img/americanfootball.png" alt="" class="sports"><img src="assets/img/baseball.png" alt="" class="sports"><img src="assets/img/cricket.png" alt="" class="sports"><img src="assets/img/hockey.png" alt="" class="sports"><img src="assets/img/mma.png" alt="" class="sports"></div>
@@ -570,10 +570,10 @@
                                     <table class="table table-striped">
                                       <thead>
                                         <tr>
-                                          <th class="t-playername">Name1</th>
-                                          <th class="t-position">POS1</th>
-                                          <th class="t-fp">FP1</th>
-                                          <th class="t-salary">Salary1</th>
+                                          <th class="t-playername">Name</th>
+                                          <th class="t-position">POS</th>
+                                          <th class="t-fp">FP</th>
+                                          <th class="t-salary">Salary</th>
                                         </tr>
                                       </thead>
                                     </table>
@@ -588,52 +588,52 @@
                                           <td class="t-salary">$7700</td>
                                         </tr>
                                         <tr>
-                                          <td>Ezekiel Elliot</td>
-                                          <td>RB</td>
-                                          <td>15.11</td>
-                                          <td>$8300</td>
+                                          <td class="t-playername">Odell beckham jr</td>
+                                          <td class="t-position">RB</td>
+                                          <td class="t-fp">12.71</td>
+                                          <td class="t-salary">$6900</td>
                                         </tr>
                                         <tr>
-                                          <td>Todd Gurley</td>
-                                          <td>RB</td>
-                                          <td>13.43</td>
-                                          <td>$6800</td>
+                                          <td class="t-playername">Tom Brady</td>
+                                          <td class="t-position">QB</td>
+                                          <td class="t-fp">18.11</td>
+                                          <td class="t-salary">$7700</td>
                                         </tr>
                                         <tr>
-                                          <td>AJ Green</td>
-                                          <td>WR</td>
-                                          <td>10.72</td>
-                                          <td>$7100</td>
+                                          <td class="t-playername">Tom Brady</td>
+                                          <td class="t-position">QB</td>
+                                          <td class="t-fp">18.11</td>
+                                          <td class="t-salary">$7700</td>
                                         </tr>
                                         <tr>
-                                          <td>Tom Brady</td>
-                                          <td>QB</td>
-                                          <td>18.11</td>
-                                          <td>$7700</td>
+                                          <td class="t-playername">Odell beckham jr</td>
+                                          <td class="t-position">RB</td>
+                                          <td class="t-fp">12.71</td>
+                                          <td class="t-salary">$6900</td>
                                         </tr>
                                         <tr>
-                                          <td>Ezekiel Elliot</td>
-                                          <td>RB</td>
-                                          <td>15.11</td>
-                                          <td>$8300</td>
+                                          <td class="t-playername">Tom Brady</td>
+                                          <td class="t-position">QB</td>
+                                          <td class="t-fp">18.11</td>
+                                          <td class="t-salary">$7700</td>
                                         </tr>
                                         <tr>
-                                          <td>Todd Gurley</td>
-                                          <td>RB</td>
-                                          <td>13.43</td>
-                                          <td>$6800</td>
+                                          <td class="t-playername">Odell beckham jr</td>
+                                          <td class="t-position">RB</td>
+                                          <td class="t-fp">12.71</td>
+                                          <td class="t-salary">$6900</td>
                                         </tr>
                                         <tr>
-                                          <td>AJ Green</td>
-                                          <td>WR</td>
-                                          <td>10.72</td>
-                                          <td>$7100</td>
+                                          <td class="t-playername">Tom Brady</td>
+                                          <td class="t-position">QB</td>
+                                          <td class="t-fp">18.11</td>
+                                          <td class="t-salary">$7700</td>
                                         </tr>
                                         <tr>
-                                          <td>AJ Green</td>
-                                          <td>WR</td>
-                                          <td>10.72</td>
-                                          <td>$7100</td>
+                                          <td class="t-playername">Tom Brady</td>
+                                          <td class="t-position">QB</td>
+                                          <td class="t-fp">18.11</td>
+                                          <td class="t-salary">$7700</td>
                                         </tr>
                                       </tbody>
                                     </table>
