fixed scroller on homepage, set height helmet on homepage

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -1160,7 +1160,7 @@
                         <div class="row">
                           <div class="col-12 no-padding">
                             <div class="nl-team-card table-data-field">
-                              <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                              <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down helmet">
                             </div>
                           </div>
                         </div>
@@ -1295,6 +1295,116 @@
                             <div class="nl-table-scroll2">
                               <table class="table table-striped">
                                 <tbody>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
+                                  <tr>
+                                    <td>WK3 G Joe Theismann 5 team Challenge</td>
+                                    <td>10</td>
+                                    <td>71/100</td>
+                                    <td>3</td>
+                                    <td>1000</td>
+                                    <td>
+                                      <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
+                                    </td>
+                                    <td>STARTED</td>
+                                  </tr>
                                   <tr>
                                     <td>WK3 G Joe Theismann 5 team Challenge</td>
                                     <td>10</td>
